kubernetes/apps/default/hook-proxy/hook-proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hook-proxy
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: hook-proxy
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    hajimari.io/enable: "true"
  name: hook-proxy
  namespace: default
spec:
  ingressClassName: "nginx"
  rules:
    - host: hook-proxy.j-burg11.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hook-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - hook-proxy.j-burg11.dev
      secretName: hook-proxy-tls-prod

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hook-proxy
  namespace: default
spec:
  # Migrated to the new Talos cluster (2026-09-16). Old Tive webhook
  # already disabled on the sending side.
  replicas: 0
  selector:
    matchLabels:
      app: hook-proxy
  template:
    metadata:
      labels:
        app: hook-proxy
    spec:
      containers:
        - name: hook-proxy
          image: hwestman/hook-proxy:latest
          imagePullPolicy: IfNotPresent
